        - Convert /end to Catalyst::Action::RenderView
        - Move controller-specific configuration into the controller
          namespaces
        - Rename Model::Organization to Model::Unit to match the rest
          of the application
        - Refactor UFL::Phonebook::Entry to use newer style
          Catalyst::Model::LDAP
        - Split view into HTML and vCard content types

0.19  Tue Nov 28 16:00:51 EST 2006
        - Cleanup {encode,decode}_ufid
        - Display "One hundred results are displayed below" instead of
          "the first 100 entries" when sizelimit is reached
        - Phonebook::Controller::People: Use get_url_args instead of
          hard coding use of uflEduUniversityId
        - Use uflEduPsDeptId instead of uflEduUniversityId for units,
          since that's now part of the DN
        - When searching for people in a unit, and only one person
          exists in the unit, redirect correctly to that person
        - Add trailing slash via uri_for instead of in HTML
        - Redirect unit URLs using the department UFID to the
          corresponding URL using the PeopleSoft department ID

0.18  Tue Aug  1 17:49:04 EDT 2006
        - Fix searches which include a middle name
        - Display title and unit for students
        - 404 on an invalid ACTION in /people/ENCODED_UFID/ACTION/
        - 404 on /people/UFID/
        - Remove vCard view; instead use a new TT wrapper
        - Improve URL generation in Phonebook::Controller::Search
        - Redirect from /people/ and /units/ to /
        - Refactor old application redirect handling into
          Phonebook::Controller::People
        - Hide unit if person is in REGISTRAR STUDENTS
        - Change "people in unit" URLs to be /units/UFID/people/
          instead of /people/unit/UFID/
        - Fix query tokenization to parse "last,first m" into (last
          first m)

0.17  Wed Apr  5 18:03:04 EDT 2006
        - Refactor organization name to configuration file