@@ -32,43 +32,6 @@ L<http://open-systems.ufl.edu/services/LDAP/>
 
 It is written using the L<Catalyst> framework.
 
-=head1 METHODS
-
-=head2 uri_for
-
-Overload C<uri_for> to handle query parameters and to accept objects
-that respond to C<get_url_args>.
-
-=cut
-
-sub uri_for {
-    my ($c, $path, @args) = @_;
-
-    my @parts;
-    my %query;
-
-    foreach my $arg (@args) {
-        if (Scalar::Util::blessed($arg) and $arg->can('get_url_args')) {
-            push @parts, $arg->get_url_args;
-        }
-        elsif (ref $arg eq 'HASH') {
-            while (my ($key, $value) = each %$arg) {
-                my @values = (ref $value eq 'ARRAY' ? @$value : $value);
-                utf8::encode($_) for @values;
-                push @{ $query{$key} }, @values;
-            }
-        }
-        else {
-            push @parts, $arg;
-        }
-    }
-
-    my $uri = $c->SUPER::uri_for($path, @parts);
-    $uri->query_form(%query);
-
-    return $uri;
-}
-
 =head1 AUTHOR
 
 Daniel Westermann-Clark E<lt>dwc@ufl.eduE<gt>
