@@ -23,16 +23,16 @@ A unit or organization in the directory.
 
 =head1 METHODS
 
-=head2 get_url_args
+=head2 uri_args
 
 Return the list of URL path arguments needed to identify this unit.
 
 =cut
 
-sub get_url_args {
+sub uri_args {
     my ($self) = @_;
 
-    return $self->uflEduPsDeptId;
+    return [ $self->uflEduPsDeptId ];
 }
 
 =head1 AUTHOR
