@@ -1,6 +1,6 @@
 <div id="adminlinks">
-  <p>Link to <a href="[% c.uri_for('/people', person, '') | html %]">this entry</a>.</p>
-  <p>Download this contact information as a <a href="[% c.uri_for('/people', person, 'vcard', '') | html %]">vCard</a>.</p>
+  <p>Link to <a href="[% c.uri_for(c.controller.action_for('view'), person.uri_args, '') | html %]">this entry</a>.</p>
+  <p>Download this contact information as a <a href="[% c.uri_for(c.controller.action_for('vcard'), person.uri_args, '') | html %]">vCard</a>.</p>
   <p>Is your directory information incomplete? <a href="http://directory.ufl.edu/edit">Update it now</a>.</p>
-  <p>Display the full <a href="[% c.uri_for('/people', person, 'full', '') | html %]"><acronym title="Lightweight Directory Access Protocol">LDAP</acronym> entry</a>.</p>
+  <p>Display the full <a href="[% c.uri_for(c.controller.action_for('full'), person.uri_args, '') | html %]"><acronym title="Lightweight Directory Access Protocol">LDAP</acronym> entry</a>.</p>
 </div>
