@@ -18,10 +18,10 @@
 [% SET odd = 1 %]
 [% FOREACH person IN people %]
     <tr[% IF odd %] class="odd"[% END %]>
-      <td><a href="[% c.uri_for('/people', person, '') | html %]">[% person.displayName | html %]</a></td>
+      <td><a href="[% c.uri_for(c.controller.action_for('view'), person.uri_args, '') | html %]">[% person.displayName | html %]</a></td>
       <td>
         [% (person.eduPersonPrimaryAffiliation != 'student' AND person.title ? person.title : person.eduPersonPrimaryAffiliation) | html %]
-        [% IF person.departmentNumber AND person.o AND c.controller('Units').hide.grep("^${person.departmentNumber}$").size == 0 %], <a href="[% c.uri_for('/units', person.departmentNumber, '') | html %]">[% person.o | html %]</a>[% END %]
+        [% IF person.departmentNumber AND person.o AND c.controller('Units').hide.grep("^${person.departmentNumber}$").size == 0 %], <a href="[% c.uri_for(c.controller('Units').action_for('view'), [ person.departmentNumber ], '') | html %]">[% person.o | html %]</a>[% END %]
       </td>
       <td>[% IF person.telephoneNumber %][% person.telephoneNumber | html %][% ELSE %]&nbsp;[% END %]</td>
       <td>[% IF person.mail %]<a href="mailto:[% person.mail | spam_armor %]">[% person.mail | spam_armor %]</a>[% ELSE %]&nbsp;[% END %]</td>
