@@ -17,7 +17,7 @@
 [% SET odd = 1 %]
 [% FOREACH unit IN units %]
     <tr[% IF odd %] class="odd"[% END %]>
-      <td><a href="[% c.uri_for('/units', unit, '') | html %]">[% unit.displayName ? unit.displayName : unit.o | html %]</a></td>
+      <td><a href="[% c.uri_for('/units', unit.uri_args, '') | html %]">[% unit.displayName ? unit.displayName : unit.o | html %]</a></td>
       <td>[% IF unit.telephoneNumber %][% unit.telephoneNumber | html %][% ELSE %]&nbsp;[% END %]</td>
       <td>[% IF unit.mail %]<a href="mailto:[% unit.mail | spam_armor %]">[% unit.mail | spam_armor %]</a>[% ELSE %]&nbsp;[% END %]</td>
     </tr>
