@@ -12,6 +12,8 @@ This file documents the revision history for UFL::Phonebook.
         - Refactor UFL::Phonebook::Entry to use newer style
           Catalyst::Model::LDAP
         - Split view into HTML and vCard content types
+        - Convert controllers to Chained actions
+        - Remove ugly uri_for override
 
 0.19  Tue Nov 28 16:00:51 EST 2006
         - Cleanup {encode,decode}_ufid
